applications/xihe-docs/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: xihe-docs
  name: xihe-docs
